crates/ink/tests/ui/contract/fail/message-input-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:16:31
   |
16 |         pub fn message(&self, _input: NonCodecType) {}
   |                               ^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Box<T>
             sp_core::Bytes
             Rc<T>
             Arc<T>
   = note: required for `NonCodecType` to implement `ink::parity_scale_codec::Decode`
note: required by a bound in `DispatchInput`
  --> src/codegen/dispatch/type_check.rs
   |
   | pub struct DispatchInput<T>(T)
   |            ------------- required by a bound in this struct
   | where
   |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:16:9
   |
16 |         pub fn message(&self, _input: NonCodecType) {}
   |         ^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Box<T>
             sp_core::Bytes
             Rc<T>
             Arc<T>
   = note: required for `NonCodecType` to implement `ink::parity_scale_codec::Decode`

error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:1:1
   |
1  | #[ink::contract]
   | ^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
...
16 |         pub fn message(&self, _input: NonCodecType) {}
   |         --- required by a bound introduced by this call
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             Box<T>
             bytes::bytes::Bytes
             Cow<'a, T>
             ink::parity_scale_codec::Ref<'a, T, U>
             sp_core::Bytes
             Rc<T>
             Arc<T>
             Vec<T>
           and $N others
   = note: required for `NonCodecType` to implement `Encode`
note: required by a bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`
  --> $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   |     pub fn push_arg<T>(
   |            -------- required by a bound in this associated function
...
   |         T: scale::Encode,
   |            ^^^^^^^^^^^^^ required by this bound in `ExecutionInput::<ArgumentList<ArgumentListEnd, ArgumentListEnd>>::push_arg`

error[E0599]: the method `try_invoke` exists for struct `CallBuilder<DefaultEnvironment, Set<Call<DefaultEnvironment>>, Set<ExecutionInput<...>>, ...>`, but its trait bounds were not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:16:9
   |
16 |         pub fn message(&self, _input: NonCodecType) {}
   |         ^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   | pub struct ArgumentList<Head, Rest> {
   | ----------------------------------- doesn't satisfy `_: Encode`
   |
   = note: the following trait bounds were not satisfied:
           `ArgumentList<Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`
